#pragma once

#include "status-effect.h"

namespace combat
{
	class slowed : public status_effect {
	public:
		slowed(float const dur, unsigned int intens);

		void on_apply(engine::actor& target) override;
		void on_expire(engine::actor& target) override;
	};
}

