@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam monochrome true

package engine {
    class actor {
    }
    class world {
    }
}

package geometry {
    class map_data {
    }
}

package audio {
    class audio_mixer {
    }
}

package assets {
    class asset_manager {
    }
    class audio_clip_id << (D,#FF7700) typedef >>
}

package math {
    class vec2 {
    }
}

package combat {

    class status_effect {
        # duration : float
        # intensity : unsigned int
        # tick_interval : float
        # tick_timer : float
        + status_effect(dur : float const, tick_inter : float, intens : unsigned int)
        + virtual on_apply(target : engine::actor&) : void
        + virtual on_expire(target : engine::actor&) : void
        + virtual affect(target : engine::actor&) : void
        + virtual ~status_effect()
        + tick(dt : float) : bool
        + is_expired() : bool const
    }

    class burning {
        + burning(dur : float const, intens : unsigned int)
        + affect(target : engine::actor&) : void override
    }

    class charmed {
        + charmed(dur : float const, intens : unsigned int)
        + on_apply(target : engine::actor&) : void override
        + on_expire(target : engine::actor&) : void override
    }

    class slowed {
        + slowed(dur : float const, intens : unsigned int)
        + on_apply(target : engine::actor&) : void override
        + on_expire(target : engine::actor&) : void override
    }

    package weapons {

        abstract class firing_mode {
            + {abstract} spawn_bullet(pos : math::vec2, angle : float, damage : float) : void
            + virtual ~firing_mode()
        }

        class hitscan_firing_mode {
            - map : geometry::map_data const&
            - world_ref : engine::world const&
            - max_range : float
            - hit_radius : float
            + hitscan_firing_mode(map : geometry::map_data const&, world : engine::world const&, range : float = 8192.0f, radius : float = 32.0f)
            + spawn_bullet(pos : math::vec2, angle : float, damage : float) : void override
        }

        class projectile_firing_mode {
            - world_ref : engine::world&
            - map_ref : geometry::map_data&
            - team : engine::faction
            - projectile_tex : assets::texture_id
            - projectile_speed : float
            - projectile_lifetime : float
            - projectile_scale : float
            + projectile_firing_mode(w : engine::world&, md : geometry::map_data&, f : engine::faction, tex : assets::texture_id, spd : float, lifetime : float = 5.0f, scale : float = 0.5f)
            + spawn_bullet(pos : math::vec2, angle : float, damage : float) : void override
        }

        class weapon {
            # ammo : std::unique_ptr<firing_mode>
            # ammo_count : int
            # max_ammo : int
            # reserve_mags : int
            # fire_rate : float
            # last_shot_time : float
            # damage : float
            # mixer : audio::audio_mixer&
            # assets : assets::asset_manager const&
            # fire_sound_id : assets::audio_clip_id
            # reload_sound_id : assets::audio_clip_id
            # reload_duration : float
            # reload_timer : float
            # reloading : bool
            # finish_reload() : void
            # weapon(firing : std::unique_ptr<firing_mode>, max : int, rate : float, dmg : float, reserve : int, mix : audio::audio_mixer&, am : assets::asset_manager const&, fire_snd : assets::audio_clip_id = -1, reload_snd : assets::audio_clip_id = -1, reload_dur : float = 1.5f)
            + virtual can_fire() : bool const
            + tick(dt : float) : void
            + resupply(amount : int) : void
            + virtual fire(pos : math::vec2, angle : float) : void
            + virtual reload() : void
            + virtual ~weapon()
            -- Friends --
            friend class game::game
        }

        class pistol {
            + pistol(map : geometry::map_data const&, world : engine::world const&, mix : audio::audio_mixer&, am : assets::asset_manager const&)
        }

        class smg {
            + smg(map : geometry::map_data const&, world : engine::world const&, mix : audio::audio_mixer&, am : assets::asset_manager const&)
        }

        class rifle {
            + rifle(map : geometry::map_data const&, world : engine::world const&, mix : audio::audio_mixer&, am : assets::asset_manager const&)
        }

        class shotgun {
            + {static} constexpr pellet_count : int = 8
            + {static} constexpr spread : float = 0.2618f
            + shotgun(map : geometry::map_data const&, world : engine::world const&, mix : audio::audio_mixer&, am : assets::asset_manager const&)
            + fire(pos : math::vec2, angle : float) : void override
        }

        class sniper_rifle {
            + sniper_rifle(map : geometry::map_data const&, world : engine::world const&, mix : audio::audio_mixer&, am : assets::asset_manager const&)
        }

        class plasma_gun {
            + plasma_gun(map : geometry::map_data&, world : engine::world&, mix : audio::audio_mixer&, am : assets::asset_manager const&)
        }

        class katana {
            + katana(mix : audio::audio_mixer&, am : assets::asset_manager const&)
            + can_fire() : bool const override
            + fire(pos : math::vec2, angle : float) : void override
            + reload() : void override
        }
    }
}

'' Status Effects Inheritance
combat::status_effect <|-- combat::burning
combat::status_effect <|-- combat::charmed
combat::status_effect <|-- combat::slowed

'' Firing Mode Inheritance
combat::weapons::firing_mode <|-- combat::weapons::hitscan_firing_mode
combat::weapons::firing_mode <|-- combat::weapons::projectile_firing_mode

'' Weapons Inheritance
combat::weapons::weapon <|-- combat::weapons::pistol
combat::weapons::weapon <|-- combat::weapons::smg
combat::weapons::weapon <|-- combat::weapons::rifle
combat::weapons::weapon <|-- combat::weapons::shotgun
combat::weapons::weapon <|-- combat::weapons::sniper_rifle
combat::weapons::weapon <|-- combat::weapons::plasma_gun
combat::weapons::weapon <|-- combat::weapons::katana

'' Dependencies
combat::status_effect ..> engine::actor
combat::weapons::weapon ..> combat::weapons::firing_mode
combat::weapons::weapon ..> audio::audio_mixer
combat::weapons::weapon ..> assets::asset_manager
combat::weapons::hitscan_firing_mode ..> geometry::map_data
combat::weapons::hitscan_firing_mode ..> engine::world
combat::weapons::projectile_firing_mode ..> engine::world
combat::weapons::projectile_firing_mode ..> geometry::map_data
combat::weapons::firing_mode ..> math::vec2

@enduml
